Revise text for relationship milestones in index.html
Updated various paragraphs to enhance clarity and detail about the relationship milestones and experiences shared.

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                     <img src="Ski_3.jpg" alt="Ski 3" class="photo-frame">
                 </div>
                 <h2>Le début d'une belle histoire</h2>
-                <p>Suite à 2 mois à vivre comme un vrai couple, nous décidons d'un weekend romantique entre ski, randonnée et visite de Lyon, et nous concluons en débutant une belle histoire.</p>
+                <p>Suite à 2 mois à vivre comme un vrai couple en roumanie, nous décidons d'un weekend romantique entre ski, randonnée et visite de Lyon. Ce week-end s'est terminé de la meilleure des manières. Le 22 février 2024 nous officialisont notre relation.</p>
             </div>
         </div>
 
@@ -332,7 +332,7 @@
                     <img src="Toulouse_3.jpeg" alt="Toulouse 3" class="photo-frame">
                 </div>
                 <h2>La toile d'araignée</h2>
-                <p>Même avec la distance nous arrivions à créer une relation. Tu es même venue me voir à Toulouse et nous y avons fait beaucoup de bêtises.</p>
+                <p>Même avec la distance nous avons réussi à créer une relation qui marche. Tu es même venue me voir à Toulouse et nous y avons fait beaucoup de bêtises.</p>
             </div>
         </div>
 
@@ -344,7 +344,7 @@
                     <img src="Avril2024_2.JPG" alt="Avril 2024 2" class="photo-frame">
                 </div>
                 <h2>Une nouvelle randonnée</h2>
-                <p>Petit passage dans les montagnes roumaines avec du bon chocolat.</p>
+                <p>Le mois suivant nous avons fait un petit passage dans les montagnes roumaines avec du bon chocolat.</p>
             </div>
         </div>
 
@@ -353,7 +353,7 @@
                 <span class="date">Mai 2024</span>
                 <img src="Bal.JPG" alt="bal" class="photo-frame">
                 <h2>Le bal</h2>
-                <p>Ça n'a pas été voté, mais on a été les plus beaux de la soirée.</p>
+                <p>lors du bal de ton école, ça n'a pas été voté, mais on a été les plus beaux de la soirée.</p>
             </div>
         </div>
 
@@ -370,7 +370,7 @@
                     <img src="Juillet2024_7.JPG" alt="Juillet 2024 7" class="photo-frame">
                 </div>
                 <h2>Notre première expérience de vie commune</h2>
-                <p>Pendant plus de 2 semaines nous en avons profité. Plage, randonnée (encore), visite de Carcassonne et un trajet retour EXCEPTIONNEL.</p>
+                <p>En juillet 2024, pendant plus de 2 semaines tu est venu faire un stage à Malissard et nous avons beaucoup profité. Plage, randonnée (encore), visite de Carcassonne et un trajet retour EXCEPTIONNEL.</p>
             </div>
         </div>
 
@@ -390,7 +390,7 @@
                     <img src="Ete2024_10.JPG" alt="Ete 2024 10" class="photo-frame">
                 </div>
                 <h2>L'été magique</h2>
-                <p>Des vacances inoubliables, suivies d'un concert génial et de supers moments à Lyon pour finir !</p>
+                <p>Des vacances inoubliables, suivies d'un concert génial et de supers moments à Lyon pour finir ! Cet été etait juste merveilleux, merci !</p>
             </div>
         </div>
 
@@ -402,7 +402,7 @@
                     <img src="Octobre2024_2.JPG" alt="Octobre 2024 2" class="photo-frame">
                 </div>
                 <h2>Merde mon passeport !</h2>
-                <p>J'ai fait 3 descentes d'organes mais j'ai réussi à venir te voir, et ça valait le coup !</p>
+                <p>A la rentrée, j'ai voulu venir te voire. Ca ne s'est pas tout à fait passé comme prévu. Mais, après 3 descentes d'organes et un cout du voyage multipié par 10 j'ai réussi à venir te voir, et ça valait le coup !</p>
             </div>
         </div>
 
@@ -435,7 +435,7 @@
                     <img src="Decembre2024_6.JPG" alt="Décembre 2024 6" class="photo-frame">
                 </div>
                 <h2>Maladie</h2>
-                <p>Après avoir fêté mon anniversaire, nous sommes partis dans le Morvan puis dans les Pyrénées pour fêter le nouvel an. Malgré nos vomitos j'ai quand même passé de supers moments ! C'était quand même la première fois que l'on s'envoyait en l'air.</p>
+                <p>Après avoir fêté mon anniversaire, nous sommes partis dans le Morvan puis dans les Pyrénées pour fêter le nouvel an. Malgré nos vomitos j'ai quand même passé de supers moments ! C'était quand même la première fois que l'on s'envoyait en l'air !</p>
             </div>
         </div>
 
@@ -453,7 +453,7 @@
                     <img src="Fevrier_8.JPG" alt="Fevrier 8" class="photo-frame">
                 </div>
                 <h2>Pas de stage</h2>
-                <p>À la fin de mes partiels, nous avons passé de beaux moments ensemble pour la Saint-Valentin, au ski et à Budapest.</p>
+                <p>À la fin de nos partiels, nous avons passé de beaux moments ensemble pour la Saint-Valentin, au ski et à Budapest. Ca à aussi été l'un des premiers moments difficile de notre relation, mais on à affronté ça de la meilleure des manière.</p>
             </div>
         </div>
 
@@ -464,7 +464,7 @@
                     <img src="Mars_1.JPG" alt="Mars 1" class="photo-frame">
                     <img src="Mars_2.jpeg" alt="Mars 2" class="photo-frame">
                 </div>
-                <h2>Anniversaire</h2>
+                <h2>Coquetier...</h2>
                 <p>Pour ton anniversaire j'ai fait l'erreur de t'offrir le pire cadeau possible : un coquetier. Désolé...</p>
             </div>
         </div>
@@ -562,13 +562,21 @@
                 <br><br>
                 En vrai, hors blague, je voulais te dire que je suis hyper fier de nous. Même si on a eu des moments difficiles, on les a toujours surmontés ensemble.
                 <br><br>
-                Quand je regarde notre histoire dans son ensemble, je me rends compte à quel point tu m'as apporté du bonheur. Merci pour ça.
+                Quand je regarde notre histoire dans son ensemble, je me rends compte à quel point tu m'as apporté de bonheur. Merci pour ça.
+                <br><br>
+                Chaque fois que je pense à toi, je me rends compte de la chance que j'ai eu de tomber sur toi. On est pareil sur tellement de point, je n'ai jamais été aussi épanoui.
                 <br><br>
                 Même si les grandes déclas c'est pas ton fort, sache que tu m'apportes déjà énormément. Tu m'as fait grandir et tu as toujours été là pour moi.
                 <br><br>
+                Comme tu le sais en ce moment c'est pas la joie chez moi mais grâce à toi c'est beaucoup plus facile à surmonter.
+                <br><br>
                 En seulement 2 ans on a vécu plus de choses que beaucoup de couples et ce n'est pas prêt de s'arrêter.
                 <br><br>
+                J'aurai aimé être la pour te prendre dans mes bras. Heureusement, on se voit bientot.
+                <br><br>
                 Je t'aime plus que tout.
+                <br><br>
+                J'ai hâte de la suite.
                 <br><br>
                 Joyeuse Saint-Valentin ❤️
             </p>
