--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 <body>
 
     <header>
-        <h1>Joyeuse Saint Valentin</h1>
+        <h1>Joyeuse Saint-Valentin</h1>
         <p class="subtitle">Comme j'ai du mal à t'expliquer pourquoi je t'aime autant, il n'y a pas de meilleur moyen que de te montrer tout le parcours qui nous a amenés jusque-là !</p>
         <div class="scroll-indicator">⬇️</div>
     </header>
@@ -306,7 +306,7 @@
                     <img src="nouvel_an_4.JPG" alt="Nouvel an 4" class="photo-frame">
                 </div>
                 <h2>Alison : "Tu es qui pour Robin ?"</h2>
-                <p>Après une arcade recousue et quelques mois d'Erasmus, les choses commencèrent à se concrétiser et tu as remué ciel et terre pour venir me voir à Valence. Pendant un diner avec mes soeur tu as même pu profiter d'un moment génant avec ma soeur.</p>
+                <p>Après une arcade recousue et quelques mois d'Erasmus, les choses commencèrent à se concrétiser et tu as remué ciel et terre pour venir me voir à Valence. Pendant un dîner avec mes sœurs, tu as même pu profiter d'un moment gênant avec ma sœur.</p>
             </div>
         </div>
 
@@ -319,7 +319,7 @@
                     <img src="Ski_3.jpg" alt="Ski 3" class="photo-frame">
                 </div>
                 <h2>Le début d'une belle histoire</h2>
-                <p>Suite à 2 mois à vivre comme un vrai couple en roumanie, nous décidons d'un weekend romantique entre ski, randonnée et visite de Lyon. Ce week-end s'est terminé de la meilleure des manières. Le 22 février 2024 nous officialisont notre relation.</p>
+                <p>Suite à 2 mois à vivre comme un vrai couple en Roumanie, nous décidons d'un week-end romantique entre ski, randonnée et visite de Lyon. Ce week-end s'est terminé de la meilleure des manières. Le 22 février 2024, nous officialisons notre relation.</p>
             </div>
         </div>
 
@@ -332,7 +332,7 @@
                     <img src="Toulouse_3.jpeg" alt="Toulouse 3" class="photo-frame">
                 </div>
                 <h2>La toile d'araignée</h2>
-                <p>Même avec la distance nous avons réussi à créer une relation qui marche. Tu es même venue me voir à Toulouse et nous y avons fait beaucoup de bêtises.</p>
+                <p>Même avec la distance, nous avons réussi à créer une relation qui marche. Tu es même venue me voir à Toulouse et nous y avons fait beaucoup de bêtises.</p>
             </div>
         </div>
 
@@ -353,7 +353,7 @@
                 <span class="date">Mai 2024</span>
                 <img src="Bal.JPG" alt="bal" class="photo-frame">
                 <h2>Le bal</h2>
-                <p>lors du bal de ton école, ça n'a pas été voté, mais on a été les plus beaux de la soirée.</p>
+                <p>Lors du bal de ton école, ça n'a pas été voté, mais on a été les plus beaux de la soirée.</p>
             </div>
         </div>
 
@@ -370,7 +370,7 @@
                     <img src="Juillet2024_7.JPG" alt="Juillet 2024 7" class="photo-frame">
                 </div>
                 <h2>Notre première expérience de vie commune</h2>
-                <p>En juillet 2024, pendant plus de 2 semaines tu est venu faire un stage à Malissard et nous avons beaucoup profité. Plage, randonnée (encore), visite de Carcassonne et un trajet retour EXCEPTIONNEL.</p>
+                <p>En juillet 2024, pendant plus de 2 semaines, tu es venue faire un stage à Malissard et nous avons beaucoup profité. Plage, randonnée (encore), visite de Carcassonne et un trajet retour EXCEPTIONNEL.</p>
             </div>
         </div>
 
@@ -390,7 +390,7 @@
                     <img src="Ete2024_10.JPG" alt="Ete 2024 10" class="photo-frame">
                 </div>
                 <h2>L'été magique</h2>
-                <p>Des vacances inoubliables, suivies d'un concert génial et de supers moments à Lyon pour finir ! Cet été etait juste merveilleux, merci !</p>
+                <p>Des vacances inoubliables, suivies d'un concert génial et de super moments à Lyon pour finir ! Cet été était juste merveilleux, merci !</p>
             </div>
         </div>
 
@@ -402,7 +402,7 @@
                     <img src="Octobre2024_2.JPG" alt="Octobre 2024 2" class="photo-frame">
                 </div>
                 <h2>Merde mon passeport !</h2>
-                <p>A la rentrée, j'ai voulu venir te voire. Ca ne s'est pas tout à fait passé comme prévu. Mais, après 3 descentes d'organes et un cout du voyage multipié par 10 j'ai réussi à venir te voir, et ça valait le coup !</p>
+                <p>À la rentrée, j'ai voulu venir te voir. Ça ne s'est pas tout à fait passé comme prévu. Mais, après 3 descentes d'organes et un coût du voyage multiplié par 10, j'ai réussi à venir te voir, et ça valait le coup !</p>
             </div>
         </div>
 
@@ -419,7 +419,7 @@
                     <img src="Novembre2024_7.JPG" alt="Novembre 2024 7" class="photo-frame">
                 </div>
                 <h2>On a vraiment fait tout ça en 1 mois ?</h2>
-                <p>Début novembre nous avons fait une randonnée magnifique en Roumanie où nous avons pu croiser un renard. Quelques semaines plus tard tu es venue me rendre visite à Paris. Nous avons exploré la ville, vu un match de l'équipe de France de rugby et fini avec de sacrées traces de griffures.</p>
+                <p>Début novembre, nous avons fait une randonnée magnifique en Roumanie où nous avons pu croiser un renard. Quelques semaines plus tard, tu es venue me rendre visite à Paris. Nous avons exploré la ville, vu un match de l'équipe de France de rugby et fini avec de sacrées traces de griffures.</p>
             </div>
         </div>
 
@@ -435,7 +435,7 @@
                     <img src="Decembre2024_6.JPG" alt="Décembre 2024 6" class="photo-frame">
                 </div>
                 <h2>Maladie</h2>
-                <p>Après avoir fêté mon anniversaire, nous sommes partis dans le Morvan puis dans les Pyrénées pour fêter le nouvel an. Malgré nos vomitos j'ai quand même passé de supers moments ! C'était quand même la première fois que l'on s'envoyait en l'air !</p>
+                <p>Après avoir fêté mon anniversaire, nous sommes partis dans le Morvan puis dans les Pyrénées pour fêter le Nouvel An. Malgré nos vomitos, j'ai quand même passé de super moments ! C'était quand même la première fois que l'on s'envoyait en l'air !</p>
             </div>
         </div>
 
@@ -453,7 +453,7 @@
                     <img src="Fevrier_8.JPG" alt="Fevrier 8" class="photo-frame">
                 </div>
                 <h2>Pas de stage</h2>
-                <p>À la fin de nos partiels, nous avons passé de beaux moments ensemble pour la Saint-Valentin, au ski et à Budapest. Ca à aussi été l'un des premiers moments difficile de notre relation, mais on à affronté ça de la meilleure des manière.</p>
+                <p>À la fin de nos partiels, nous avons passé de beaux moments ensemble pour la Saint-Valentin, au ski et à Budapest. Ça a aussi été l'un des premiers moments difficiles de notre relation, mais on a affronté ça de la meilleure des manières.</p>
             </div>
         </div>
 
@@ -465,7 +465,7 @@
                     <img src="Mars_2.jpeg" alt="Mars 2" class="photo-frame">
                 </div>
                 <h2>Coquetier...</h2>
-                <p>Pour ton anniversaire j'ai fait l'erreur de t'offrir le pire cadeau possible : un coquetier. Désolé...</p>
+                <p>Pour ton anniversaire, j'ai fait l'erreur de t'offrir le pire cadeau possible : un coquetier. Désolé...</p>
             </div>
         </div>
 
@@ -517,7 +517,7 @@
                     <img src="Decembre_8.jpeg" alt="Decembre 8" class="photo-frame">
                 </div>
                 <h2>Ça devient sérieux</h2>
-                <p>Après avoir fêté mon anniversaire, j'ai rencontré la belle-famille. C'était génial, je suis trop heureux d'avoir passé cette étape. Après le nouvel an j'ai eu une autre occasion de draguer les mamies !</p>
+                <p>Après avoir fêté mon anniversaire, j'ai rencontré la belle-famille. C'était génial, je suis trop heureux d'avoir passé cette étape. Après le Nouvel An, j'ai eu une autre occasion de draguer les mamies !</p>
             </div>
         </div>
 
@@ -554,7 +554,7 @@
                 <br><br>
                 Même si nous ne pouvons pas être ensemble pour cette Saint-Valentin, nous rattraperons ça le 27.
                 <br><br>
-                En tout cas profite de ton séjour en Angleterre, amusez-vous bien toi et ta sœur.
+                En tout cas, profite de ton séjour en Angleterre, amusez-vous bien, toi et ta sœur.
                 <br><br>
                 Si vous sortez ce soir, sache que le monde va te penser célibataire. Tu vas donc devoir combattre l'envahisseur.
                 <br><br>
@@ -564,15 +564,15 @@
                 <br><br>
                 Quand je regarde notre histoire dans son ensemble, je me rends compte à quel point tu m'as apporté de bonheur. Merci pour ça.
                 <br><br>
-                Chaque fois que je pense à toi, je me rends compte de la chance que j'ai eu de tomber sur toi. On est pareil sur tellement de point, je n'ai jamais été aussi épanoui.
+                Chaque fois que je pense à toi, je me rends compte de la chance que j'ai eue de tomber sur toi. On est pareil sur tellement de points, je n'ai jamais été aussi épanoui.
                 <br><br>
                 Même si les grandes déclas c'est pas ton fort, sache que tu m'apportes déjà énormément. Tu m'as fait grandir et tu as toujours été là pour moi.
                 <br><br>
-                Comme tu le sais en ce moment c'est pas la joie chez moi mais grâce à toi c'est beaucoup plus facile à surmonter.
+                Comme tu le sais, en ce moment, ce n'est pas la joie chez moi, mais grâce à toi, c'est beaucoup plus facile à surmonter.
                 <br><br>
-                En seulement 2 ans on a vécu plus de choses que beaucoup de couples et ce n'est pas prêt de s'arrêter.
+                En seulement 2 ans, on a vécu plus de choses que beaucoup de couples et ce n'est pas près de s'arrêter.
                 <br><br>
-                J'aurai aimé être la pour te prendre dans mes bras. Heureusement, on se voit bientot.
+                J'aurais aimé être là pour te prendre dans mes bras. Heureusement, on se voit bientôt.
                 <br><br>
                 Je t'aime plus que tout.
                 <br><br>
