Fix typos in French text in index.html

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
     <header>
         <h1>Joyeuse Saint-Valentin</h1>
-        <p class="subtitle">Comme j'ai du mal à t'expliquer pourquoi je t'aime autant, il n'y a pas de meilleur moyen que de te montrer tout le parcours qui nous a amenés jusque-là !</p>
+        <p class="subtitle">Comme j'ai du mal à t'expliquer pourquoi je t'aime autant, il n'y a pas de meilleur moyen que de te montrer tout le parcours qui nous a amené jusque-là !</p>
         <div class="scroll-indicator">⬇️</div>
     </header>
 
@@ -353,7 +353,7 @@
                 <span class="date">Mai 2024</span>
                 <img src="Bal.JPG" alt="bal" class="photo-frame">
                 <h2>Le bal</h2>
-                <p>Lors du bal de ton école, ça n'a pas été voté, mais on a été les plus beaux de la soirée.</p>
+                <p>Lors du bal de ton école, ça n'a pas été voté, mais on été les plus beaux de la soirée.</p>
             </div>
         </div>
 
